# Youtube-RAG-ChatBot

./: README.md  app.py  pyproject.toml  requirements.txt
src/: embedder.py  loader.py  prompt_template.py  rag_pipeline.py  retriever.py  splitter.py  vector_store.py
testing/: test_embd.py  test_llm.py
vector_store/5437c5c6-d090-4806-83b1-1d3b678c11b1/: index_metadata.pickle
